# OpenGL

./: .gitignore  CMakeLists.txt
include/: Renderer.h
libs/GLFW/: CMakeLists.txt
libs/glew/: CMakeLists.txt
res/shaders/: basic.shader
resources/shaders/: basic.shader
src/: Application.cpp  IndexBuffer.h  InitializeLibs.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  main.cpp
